<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFFFFF"
  android:padding="20dp"
  android:gravity="center">
  <ImageView
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:src="@drawable/blue_sofa"/>
  <TextView
  	android:text="@string/email"
  	android:layout_height="wrap_content"
  	android:layout_width="fill_parent"
  	android:textColor="#000000"/>
  <EditText
  	android:id="@+id/email"
  	android:text="ahmetcan.kepenek@gmail.com"
  	android:layout_height="wrap_content"
  	android:layout_width="fill_parent"
  	android:background="@android:drawable/editbox_background"
  	android:hint="@string/email"
  	android:maxLength="30"/>
  <TextView
  	android:text="@string/password"
  	android:layout_height="wrap_content"
  	android:layout_width="fill_parent"
  	android:textColor="#000000"/>
  <EditText
  	android:id="@+id/parola"
  	android:layout_height="wrap_content"
  	android:layout_width="fill_parent"
  	android:password="true"
  	android:hint="@string/password"
  	android:background="@android:drawable/editbox_background"
  	android:maxLength="30"/>
  	<LinearLayout
  		android:orientation="horizontal"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
  <Button
  	android:id="@+id/loginButton"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/login"/>
  <Button
  	android:id="@+id/singButton"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/signUp"/>
  	</LinearLayout>
</LinearLayout>

