<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ulke" />
    <AutoCompleteTextView android:id="@+id/autocomplete_country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sehir" />
    <AutoCompleteTextView android:id="@+id/autocomplete_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"/>
	<ListView
		android:id="@+id/aranan"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content">
	
	</ListView>
	<Button
		android:id="@+id/ara"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"	
		android:text="@string/ara"
	></Button>

 
</LinearLayout>