<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation = "vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
 >
<ScrollView
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation = "vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFFFFF"
  android:padding="10dip">
  <RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<ImageView
  		android:id="@+id/profil_image"
  	  	android:layout_width="wrap_content"
  	  	android:layout_height="wrap_content"
  	  	android:src="@drawable/icon"
  	/>
  	<Button
  		android:id="@+id/degistir0"
  	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:text="@string/image"
	  	android:layout_toRightOf="@id/profil_image"
  	/>
  	</RelativeLayout>
   	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/Name"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText2"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText"
  		android:text=" "
  	/>
  	<Button
  		android:id="@+id/degistir"
  	  	android:layout_width="30px"
	  	android:layout_height="30px"
	  	android:layout_alignParentRight="true"
	  	android:background="@drawable/edit_icon"	  
  	/>
  	</RelativeLayout>
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText3"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/lastName"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText4"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText3"
  		android:text=" "
  	/>
  	<Button
  		android:id="@+id/degistir2"
  	  	android:layout_width="30px"
	  	android:layout_height="30px"
	  	android:layout_alignParentRight="true"
	  	android:background="@drawable/edit_icon"	  
  	/>
  	</RelativeLayout>
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText5"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/email"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText6"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText5"
  		android:text=" "
  	/>
  	<Button
  		android:id="@+id/degistir3"
  	  	android:layout_width="30px"
	  	android:layout_height="30px"
	  	android:layout_alignParentRight="true"	
	  	android:background="@drawable/edit_icon"  
  	/>
  	</RelativeLayout>
  	
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciTextd1"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/dogumTarihi"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciTextd2"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciTextd1"
  		android:text=" "
  	/>
  	<Button
  		android:id="@+id/tarihButton"
  	  	android:layout_width="30px"
	  	android:layout_height="30px"
	  	android:layout_alignParentRight="true"	
	  	android:background="@drawable/edit_icon"  
  	/>
  	</RelativeLayout>
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciTextp1"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/password"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciTextp2"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciTextp1"
  		android:text="******"
  	/>
  	<Button
  		android:id="@+id/parolaButton"
  	  	android:layout_width="30px"
	  	android:layout_height="30px"
	  	android:layout_alignParentRight="true"	
	  	android:background="@drawable/edit_icon"  
  	/>
  	</RelativeLayout>
  	<TextView
  		android:text="@string/konumBilgileri"
  		android:layout_height="wrap_content"
  		android:layout_width="wrap_content"
  		android:textSize="20dp"
  		android:textColor="#000000"
  		android:layout_gravity="center_horizontal"/>
  	<!-- <RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText7"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/enlem"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText8"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText7"
  		android:text=" "
  	/>

  	</RelativeLayout>
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText9"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/boylam"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText10"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText9"
  		android:text=" "
  	/>
  	
  	</RelativeLayout>-->
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText11"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/sehir"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText12"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText11"
  		android:text=" "
  	/>
  
  	</RelativeLayout>
  	<RelativeLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id="@+id/kullaniciText13"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/ulke"
  		android:textColor="#000000"
  	/>
  	<TextView
  		android:id="@+id/kullaniciText14"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/kullaniciText13"
  		android:text=" "
  	/>
  
  	</RelativeLayout>
  	<Button
  		android:id="@+id/konum"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/location"
  		android:paddingTop="10dip"
  	/>
  		<Button
  		android:id="@+id/kaydet"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/kaydet"
  		android:paddingTop="10dip"
  	/>
</LinearLayout>
</ScrollView>
</LinearLayout>